--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,8 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "types": ["vitest/importMeta"],
+
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
