--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.60.6",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
+    "happy-dom": "^17.4.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
