--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.60.6",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "happy-dom": "^17.4.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -38,7 +39,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
+    "vite": "^6.3.4",
     "vitest": "^3.0.8"
   }
 }
